--- a/Objects/RTOS.build_log.htm
+++ b/Objects/RTOS.build_log.htm
@@ -22,21 +22,14 @@ Dialog DLL:      TCM.DLL V1.14.5.0
  
 <h2>Project:</h2>
 F:\STM32\project\RTOS\RTOS.uvprojx
-Project File Date:  05/18/2018
+Project File Date:  05/14/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.05 update 2 (build 169)', folder: 'd:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling croutine.c...
-compiling event_groups.c...
-compiling list.c...
-compiling queue.c...
-compiling tasks.c...
-compiling timers.c...
-compiling heap_4.c...
-compiling port.c...
+compiling main.c...
 linking...
-Program Size: Code=3132 RO-data=336 RW-data=40 ZI-data=1024  
+Program Size: Code=12344 RO-data=336 RW-data=184 ZI-data=23160  
 FromELF: creating hex file...
 ".\Objects\RTOS.axf" - 0 Error(s), 0 Warning(s).
 
